--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'MyFont';
+  src: url('/public/fonts/retroFont.otf') format('otf');
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -12,4 +19,5 @@ body {
   width: 100%;
   min-height: 100vh;
   background-color: #D9D9D9;
+  font-family: 'MyFont'; 
 }
