add anyDisk png inside LoadingContainer and also add min height on the main div

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,10 +9,16 @@
   font-style: normal;
 }
 
+html, body {
+  @apply overflow-hidden;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
+  
 }
 
 body {
