--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,22 +9,15 @@
   font-style: normal;
 }
 
-html, body {
-  margin: 0;
-  min-height: 100%;
-  overflow: hidden;
-}
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
-  
 }
 
 body {
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
   font-family: 'MyFont'; 
+  overflow: hidden;
 }
