add on the body local font to change every text font family

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,14 +9,14 @@
   font-style: normal;
 }
 
+::-webkit-scrollbar{
+  display: none;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
 }
 
 body {
