create header file and style it

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,16 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: 'MyFont';
-  src: url('/public/fonts/retroFont.otf') format('otf');
-  font-weight: normal;
-  font-style: normal;
-}
-
-::-webkit-scrollbar{
-  display: none;
-}
 
 * {
   margin: 0;
@@ -24,3 +14,16 @@ body {
   height: 100%;
   font-family: 'MyFont'; 
 }
+
+
+  .underline-button::after {
+    content: ""; 
+    position: absolute; 
+    bottom: 2px; 
+    left: 0;
+    height: 1px;
+    width: 20%; 
+    background-color: currentColor; 
+  }
+  
+
