--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,5 +25,16 @@ body {
     width: 20%; 
     background-color: currentColor; 
   }
+
+  .underline-li::after {
+    content: ""; 
+    position: absolute; 
+    bottom: 5px; 
+    left: 16px;
+    height: 0.5px;
+    width: 55%; 
+    background-color: rgb(150, 150, 150); 
+  }
+  
   
 
